--- a/Steganography_154048G/Properties/Resources.resx
+++ b/Steganography_154048G/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="click to upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\click to upload.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="click to upload1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\click to upload1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
